--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <section class="stay-home">
+    <section class="stay-home grand-ma">
 
         <div class="mission-on">
            <div class="border-left">
@@ -30,6 +30,63 @@
             <img src="images/person/person-0.png" alt="">
         </div>
     </section>
+
+<!--section/mission/in-->
+
+    <section class="mission-in">
+        <h1 id="top-heading">My Mission in <span class="color-etc">2022</span> </h1>
+        <div class="newest-on">
+            <div class="mission-one">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h3>Vission</h3>
+                <p>Today's top 10 high paying Programming program roles.<br>Leverage your professional network, and get hired.<br>Search for Programming program with High Incentives for various.</p>
+            </div>
+            <div class="mission-tow">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h3>Mission</h3>
+                <p>Today's top 10 high paying Programming program roles.<br>Leverage your professional network, and get hired.<br>Search for Programming program with High Incentives for various.</p>
+            </div>
+            <div class="mission-three">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h3>Goals</h3>
+                <p>Today's top 10 high paying Programming program roles.<br>Leverage your professional network, and get hired.<br>Search for Programming program with High Incentives for various.</p>
+            </div>
+        </div>
+        
+
+    </section>
+
+    <section class="nort-west">
+        <div>
+            <img class="nort-img" src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="Limits-wtn">
+            <h2>Develop <br>Without Limits</h2>
+            <p>Your team can confidently train and support youth-facing professionals.<br>Without a clear system of high-quality training and support, your youth-focused <br> initiative may not sustain.  Great staff could leave. Your program won't reach as many young people as it could. </p>
+            <a class="link-btn" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">Read the Documentation</a>
+        </div>
+    </section>
+
+    <section class="east-west">
+          <div class="global-wtn">
+              <h2>Know our <br>Global community</br></h2>
+              <p>The term world community is used primarily in political and humanitarian contexts to describe an international aggregate of nation states of widely varying types. In most connotations, the term is used to convey meanings attached to  consensus or inclusion  </p>
+              <a class="link-btn" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">Read the Documentation</a>
+          </div>
+          <div>
+              <img class="project-img" src="images/pictures/project.png" alt="">
+          </div>
+    </section>
+
+    <footer>
+        <div class="footer-down">
+            <h1>mission <span class="color-etc">2022</span></h1>
+        <p>@Fuad Hasan.Hardwork,perseverance and Determination for 2022</p>
+        </div>
+        
+    </footer>
+
+
 
 
 
